clusters/homelab/apps/kiali/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: kiali-allow-required-clients
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kiali
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway
              - cluster.local/ns/traefik/sa/traefik
              - cluster.local/ns/monitoring/sa/prometheus-kube-prometheus-prometheus
              - cluster.local/ns/octelium-client/sa/octelium-client
